# DataGenerator

./: LICENSE  README.md  __init__.py  config.py  main.py  pyproject.toml  run.py  test_clean.sqlite  test_db.sqlite
core/: connection_manager.py  models.py  schema_analyzer.py
generator/: data_generator.py  pattern_detector.py  template_engine.py
ui/: main_window.py  pattern_editor_dialog.py  worker.py
